Changelog
---------

Version 1.0b8 - February 17, 2009
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Allow attribute access to ``__call__`` method on bound page
  templates. [malthe]

Version 1.0b7 - February 13, 2009
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Fixed issue where symbol mapping would not be carried through under
  a negation (not). [malthe]

- Optimize simple case: if path expression is a single path and path
  is 'nothing' or has 'nocall:', just return value as-is, without
  going through path_traverse. [sidnei]

- Moved evaluate_path and evaluate_exists over from ``five.pt``, adds
  support for global ``path()`` and ``exists()`` functions for use in
  ``python:`` expressions (LP #317967).

- Added Zope security  declaration for  the repeat dictionary (tales
  iterator). [malthe]

Version 1.0b6 - December 18, 2008
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- The 'not' pragma acts recursively. [malthe]

Version 1.0b5 - December 15, 2008
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- View templates now support argument-passing for alternative context
  and request (for compatibility with
  ``zope.app.pagetemplate``). [malthe]

- Switched off the $-interpolation feature per default; It may be activated
  on a per-template basis using ``meta:interpolation='true'``. [seletz]

- Allow more flexibility in overriding the PathTranslator method. [hannosch]

- Removed the forced defaultencoding from the benchmark suite. [hannosch]

Version 1.0b4 - November 19, 2008
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Split out content provider function call to allow modification
  through subclassing. [malthe]

- Added language negotiation. [malthe]

- Simplified template class inheritance. [malthe]

- Added support for the question-mark operator in path-expressions. [malthe]

- Updated expressions to recent API changes. [malthe]

- Added 'exists' and 'not' translators. [malthe]

  Bug fixes

- Adjusted the bigtable benchmark test to API changes. [hannosch]

Version 1.0b3 - November 12, 2008